service-mesh/bookinfo/09_trafficcontrol/fault_injection/reviews-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    example: bookinfo
spec:
  hosts:
  - reviews
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    match:
      - headers:
          end-user:
            exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
